ops/platform-dev/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-library
spec:
  # Running more than 1 replica may present some issues with authenticating, so it should be avoided for now
  replicas: 1
  template:
    metadata:
      labels:
        app: content-library
    spec:
      containers:
      - name: content-library
        image: gcr.io/adhoc-dev-service-platform/content-library:latest
      nodeSelector: {}
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 25
              preference:
                matchExpressions:
                  - key: platform.adhoc.dev/cost-type
                    operator: In
                    values:
                      - on-demand
            - weight: 30
              preference:
                matchExpressions:
                  - key: platform.adhoc.dev/cost-type
                    operator: In
                    values:
                      - spot
